@@ -242,7 +242,9 @@ ul.favorites li a { line-height: 18px; vertical-align: top; }
 ul.messages { overflow: auto; vertical-align: top; background-color: #FFFFFF; margin: 1px; text-align: left; }
 ul.messages li { font-size: 1.1em; line-height: 18px; }
 ul.messages li.info { color: #000000; list-style: url("../images/general/warning2.png") inside; }
-ul.messages li.error { color: #D40000; list-style: url("../images/general/error3.png") inside; white-space: pre-wrap; }
+ul.messages li.error {
+	color: #D40000; list-style: url("../images/general/error3.png") inside; white-space: pre-wrap; word-break: normal;
+}
 
 /* column */
 .column { margin: 5px 0 5px 5px; min-width: 240px; padding-bottom: 100px; }
